--- a/bower.json
+++ b/bower.json
@@ -6,7 +6,9 @@
     "paper-elements": "PolymerElements/paper-elements#1.0.1",
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
-    "page": "visionmedia/page.js#~1.6.3"
+    "page": "visionmedia/page.js#~1.6.3",
+    "polymer-date-picker": "~0.0.11",
+    "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3"
   },
   "devDependencies": {
     "web-component-tester": "*",
