--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
     "polymer-date-picker": "~0.0.11",
-    "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3"
+    "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3",
+    "paper-time-picker": "bendavis78/paper-time-picker#~1.0.3"
   },
   "devDependencies": {
     "web-component-tester": "*",
