--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "page": "visionmedia/page.js#~1.6.3",
     "polymer-date-picker": "~0.0.11",
     "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3",
-    "paper-time-picker": "bendavis78/paper-time-picker#~1.0.3"
+    "paper-time-picker": "bendavis78/paper-time-picker#~1.0.3",
+    "polymer-themes": "~1.0.1"
   },
   "devDependencies": {
     "web-component-tester": "*",
