WIP: Transition to cloud code, implemented loading element.

--- a/bower.json
+++ b/bower.json
@@ -3,13 +3,14 @@
   "private": true,
   "dependencies": {
     "iron-elements": "PolymerElements/iron-elements#1.0.0",
-    "paper-elements": "PolymerElements/paper-elements#1.0.1",
-    "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
-    "polymer-date-picker": "~0.0.11",
+    "paper-card": "PolymerElements/paper-card#~1.0.3",
     "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3",
+    "paper-elements": "PolymerElements/paper-elements#1.0.1",
     "paper-time-picker": "bendavis78/paper-time-picker#~1.0.3",
+    "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
+    "polymer-date-picker": "~0.0.11",
     "polymer-themes": "~1.0.1"
   },
   "devDependencies": {
