--- a/bower.json
+++ b/bower.json
@@ -4,10 +4,12 @@
   "dependencies": {
     "iron-elements": "PolymerElements/iron-elements#1.0.0",
     "moment": "~2.10.6",
+    "moment-recur": "~1.0.5",
     "neon-elements": "PolymerElements/neon-elements#1.0.0",
     "page": "visionmedia/page.js#~1.6.3",
     "paper-card": "PolymerElements/paper-card#~1.0.3",
     "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.2",
     "paper-elements": "PolymerElements/paper-elements#1.0.1",
     "paper-time-picker": "bendavis78/paper-time-picker#~1.0.3",
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
