--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "iron-collapse": "PolymerElements/iron-collapse#~1.0.3",
     "iron-elements": "PolymerElements/iron-elements#1.0.0",
+    "iron-image": "PolymerElements/iron-image#~1.0.2",
     "moment": "~2.10.6",
     "moment-recur": "~1.0.5",
     "moment-timezone": "~0.4.0",
@@ -13,6 +14,7 @@
     "paper-date-picker": "bendavis78/paper-date-picker#~1.0.3",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.0.2",
     "paper-elements": "PolymerElements/paper-elements#1.0.1",
+    "paper-spinner": "PolymerElements/paper-spinner#~1.0.2",
     "paper-time-picker": "bendavis78/paper-time-picker#~1.0.3",
     "platinum-elements": "PolymerElements/platinum-elements#1.0.1",
     "polymer-date-picker": "~0.0.11",
